# support_ticket_resolution_agent

./: .env.example  README.md  graph_router.py  langgraph.json  pyproject.toml
data/: escalation_log.csv
src/agent/: config.py  graph.py
src/agent/nodes/: classifier.py  drafter.py  escalation.py  retriever.py  reviewer.py
