[project]
name = "agent"
version = "0.0.1"
description = "LangGraph support ticket agent"
authors = [{ name = "Khuraim Shaikh" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.6",
    "langgraph-cli[inmem]>=0.2.8",
    "openai>=1.30.1",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.1",
    "streamlit>=1.35.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "tiktoken",
    "sentence-transformers",
    "requests>=2.32.0"
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest>=8.3.5"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }


[tool.ruff]
lint.select = ["E", "F", "I", "D", "D401", "T201", "UP"]
lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
